--- a/App/templates/addproperty.html
+++ b/App/templates/addproperty.html
@@ -118,6 +118,15 @@ button[type="submit"]:hover {
         <input type="number" id="price" name="price" required>
       </div>
       <div>
+        <div>
+          <label for="Bedrooms">Bedrooms:</label>
+          <input type="number" id="Bedrooms" name="Bedrooms" min="1" value="1" required>
+        </div>
+        <div>
+          <label for="Bathrooms">Bathrooms:</label>
+          <input type="number" id="Bathrooms" name="Bathrooms" min="1" value="1" required>
+        </div>    
+        <div>
         <label for="description">Description:</label>
         <textarea id="description" name="description" rows="4" required></textarea>
       </div>
